# s3-saver

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/configs/: settings.py
app/drivers/aws/: __init__.py  base.py  buckets.py  exceptions.py  models.py
